# Bharat-Agri-Lens

./: .gitattributes  .gitignore  README.md  nixpacks.toml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  mobile.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  db.py  logging.py  main.py
apps/api/app/admin/: router.py  schemas.py
apps/api/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
apps/api/app/chat/: models.py  router.py  schemas.py
apps/api/app/common/: base.py  encryption.py  errors.py  meta_kv.py  s3.py
apps/api/app/diagnostics/: mock_predictor.py  models.py  router.py  schemas.py
apps/api/app/jobs/: __init__.py  daily_tip.py  export_training_data.py  moderation.py  process_treatment_reminders.py
apps/api/app/push/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/app/reminders/: __init__.py  models.py  outbreaks.py  schedule.py
apps/api/app/services/: __init__.py  bhashini.py  translation.py
apps/api/app/translations/: router.py  schemas.py
apps/api/app/uploads/: models.py  router.py  schemas.py
apps/api/app/users/: models.py  router.py  schemas.py
apps/api/app/voice/: audio.py  router.py  schemas.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_users_mobile_nullable.py  0003_admin_role_and_review.py  0004_expand_model_version.py  0005_widen_pii_for_encryption.py  0006_user_preferences.py  0007_fcm_tokens.py  0008_diagnostic_rejection.py  0009_diagnostic_prediction_source.py  0010_meta_kv.py  0011_reminders_and_outbreaks.py
apps/api/scripts/: check_411001_fungal.py  delete_curl_user.py  demo_outbreak_panel.py  demo_treatment_progress.py  export_labelling_queue.py  seed_curl_user.py  smoke_test_encryption.py  test_llm_fallback_prod.py  test_outbreak_seed.py
apps/api/tests/: conftest.py  test_auth.py  test_chat.py  test_health.py  test_labelling_queue.py  test_moderation.py  test_ownership.py  test_translation.py  test_uploads.py  test_voice.py
apps/mobile/: .gitignore  README.md  capacitor.config.ts  package.json
apps/mobile/android/: capacitor.settings.gradle
apps/mobile/android/app/: build.gradle  capacitor.build.gradle
apps/mobile/android/app/src/main/java/in/bharatagrilens/app/: MainActivity.java
apps/mobile/android/app/src/main/res/values/: strings.xml
apps/web/: .env.production  index.html  package.json  serve.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: LanguageSelector.tsx  Layout.tsx  MicButton.tsx
apps/web/src/components/ui/: AppBar.tsx  BottomNav.tsx  EmptyState.tsx  IconButton.tsx  Skeleton.tsx
apps/web/src/lib/: api.ts  auth.ts  camera.ts  i18n.ts  platform.ts  push.ts
apps/web/src/pages/: AdminLabellingQueue.tsx  Chat.tsx  Disclaimer.tsx  History.tsx  Home.tsx  Landing.tsx  Login.tsx  Notifications.tsx  Onboarding.tsx  Profile.tsx  Result.tsx  Scan.tsx  Settings.tsx
docs/: MOBILE.md
docs/design/home-mockups/: A-my-field-today.html  B-mission-control.html  C-action-first.html  index.html
infra/railway/: README.md
services/cron/: Dockerfile  README.md  run.sh
services/inference/: .env.example  Dockerfile  README.md  pyproject.toml
services/inference/app/: __init__.py  chat.py  config.py  llm_fallback.py  logging.py  main.py  ood.py  ood_prompts.py  predictor.py  real_predictor.py
services/inference/app/clip_assets/: clip_prompts.json  clip_text_embeddings.npy
services/inference/scripts/: list_gemini_models.py  precompute_clip_embeddings.py  smoke_test_gemini.py  test_ood_gate.py
services/training/: .gitignore  README.md  pyproject.toml
services/training/configs/: baseline.yaml  plantvillage_v0.yaml  synthetic.yaml
services/training/scripts/: prepare.py
services/training/src/: __init__.py  augment.py  config.py  datasets.py  eval.py  export.py  model.py  synth.py  train.py
services/training/tests/: test_pipeline.py  test_prepare.py
spaces/training/: .gitignore  Dockerfile  README.md  app.py
