[project]
name = "bal-api"
version = "0.1.0"
description = "BharatAgriLens FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=43.0.1",
    "httpx>=0.27.2",
    "python-multipart>=0.0.12",
    "boto3>=1.35.36",
    "pillow>=10.4.0",
    "structlog>=24.4.0",
    "resend>=2.4.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
    "firebase-admin>=6.5.0",
    # Active-learning data export. ``datasets`` builds the parquet +
    # ships to HF Hub; ``huggingface_hub`` is the lower-level upload.
    # Together they add ~50 MB to the image — acceptable for the
    # value of the active-learning loop.
    "datasets>=3.0.0",
    "huggingface_hub>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "T20", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E501", "N999"]
"tests/*" = ["S105", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
