[project]
name = "bal-inference"
version = "0.1.0"
description = "BharatAgriLens inference service (vision + LLM)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
ml = [
    # Heavy dependencies pulled in once GPU image is built
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.45.0",
    "pillow>=10.4.0",
    "onnxruntime>=1.19.2",
]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
