[project]
name = "bal-inference"
version = "0.1.0"
description = "BharatAgriLens inference service (vision + LLM)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
# `--extra ml` pulls in the real ONNX predictor stack. Keep this lean —
# torch / transformers are TRAINING-time deps and live in
# services/training, not here. Inference just loads the exported ONNX.
ml = [
    "pillow>=10.4.0",
    "onnxruntime>=1.19.2",
    "numpy>=1.26",
    "boto3>=1.35.36",
]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
