[project]
name = "bal-training"
version = "0.1.0"
description = "BharatAgriLens vision model training pipeline (PlantViT LoRA)"
# Stick to 3.11/3.12 for now — torch 2.4 cp313 wheels are not on
# every platform yet. Newer versions can bump this once stable.
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "pillow>=10.4.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.19.0",
    "scikit-learn>=1.5.0",
    "albumentations>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[project.scripts]
bal-train = "src.train:main"
bal-eval = "src.eval:main"
bal-export = "src.export:main"
bal-synth = "src.synth:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
